[tool.poetry]
name = "pythonic-garage-band"
version = "0.1.0"
description = ""
authors = ["Davee Sok <daveesok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.6b0"
pytest = "^6.2.4"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
